tests/success/builtins/PrintString.vix
main = printString "Hello world!\n"
