tests/syntax-error/Recovery.vix
test 1 =
test 2 = "yolo!\n"
test 4 = case a

main = printString (test 2)
